# mondaybot

./: README.md  flake.nix  pyproject.toml
mondaybot/: __init__.py  cli.py
